# SlotMachine

./: CMakeLists.txt
lib/freetype/lib/pkgconfig/: freetype2.pc
lib/glew/: CMakeLists.txt  a.bat  glew.pc
lib/glew/src/: visualinfo.c
shaders/: rectangle.fs  rectangle.vs  renderToTexture.fs  sprite.fs  sprite.vs
src/: GLContext.cpp  GLContext.hpp  GLFWWrapper.cpp  GLFWWrapper.hpp  RenderToTexture.cpp  RenderToTexture.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Shader.cpp  Shader.hpp  SlotMachineEngine.cpp  SlotMachineEngine.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  TimeManager.cpp  TimeManager.hpp  main.cpp
